test-cases/negative/test_110_expect_without_is.lay
# negative test: expect statement without 'is' keyword
# expected: parser should reject this

expect 10


